--- a/app/views/layouts/spacelab.html.erb
+++ b/app/views/layouts/spacelab.html.erb
@@ -63,7 +63,7 @@
 
 	<div class="row" style="margin-bottom:40px;">
 	  <div class="col-lg-4" style="padding-top:40px;">
-            <label for="amount">Volume:</label>
+            <label for="amount">Slider Value:</label>
 	    <input type="text" id="amount" disabled>
 	  </div>
 
